<resources>
    <string name="app_name">MyWarehouse</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="log_in">Log in</string>
    <string name="not_registered">Not registered?</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="inventory">Inventory</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="warehouse_image_desc">Warehouse Image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already registered?</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="birthday">Birthday</string>
    <string name="enter_birthday">Enter birthday</string>
    <string name="role">Role</string>
    <string name="picker">Picker</string>
    <string name="reports">Reports</string>
    <string name="warehouse_worker">Warehouse worker</string>
    <string name="warehouse_worker_picker">Warehouse worker And Picker</string>
    <string name="update">Update</string>
    <string name="admin">Admin</string>
    <string name="app_title">Warehouse Management System</string>
    <string name="app_explanation">This application helps warehouse workers and pickers manage and organize their inventory efficiently. It provides an easy way to track items, their locations, and quantities.</string>
    <string name="app_feature_1">Add and Update Items: Warehouse workers can easily add new items to the system, including detailed information such as name, description, location, quantity, and an up-to-date image.</string>
    <string name="app_feature_2">Search and Find Items: Pickers can search for items by various categories and see their exact locations in the warehouse, making the picking process faster and more efficient.</string>
    <string name="app_explanation_worker">This application helps warehouse workers manage and organize their inventory efficiently. It provides an easy way to track items, their locations, and quantities, and generate reports.</string>
    <string name="app_feature_1_worker">Add and Update Items: Easily add new items to the system, including detailed information such as name, description, location, quantity, and an up-to-date image.</string>
    <string name="app_feature_2_worker">Generate Reports: Create detailed reports about inventory, including item counts, locations, and more.</string>
    <string name="app_explanation_worker_picker">This application helps both pickers and warehouse workers to manage and organize their tasks efficiently. It provides features for tracking items, managing orders, generating reports, and maintaining account information.</string>
    <string name="enter_phone">Enter Phone number</string>
    <string name="phone">Phone</string>
    <string name="my_orders">My Orders</string>
    <string name="add_new_item">Add new Item</string>
    <string name="update_item">Update Item</string>
    <string name="warehouse_map">Warehouse Map</string>
    <string name="barcode">Barcode</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="location">Location</string>
    <string name="attach_images">Attach Images</string>
    <string name="save_item">Save Item</string>
    <string name="enter_barcode">Enter Barcode</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_location">Enter Location</string>
    <string name="capture_image">Capture image</string>
    <string name="delete">Delete</string>
    <string name="add_item">Add new Item</string>
    <string name="return_">Return</string>
    <string name="search_hint">Enter Barcode or name</string>
    <string name="save_warehouse">Save</string>
    <string name="search_address">Search Adress</string>
    <string name="google_maps_key">AIzaSyCXzQLybdMJq2O_3TamNGKJp0y2gRFa_cA</string>
    <string name="instructions_for_warehouse_setting">Tap on the map to place four markers that define the corners of your warehouse. Double-tap a marker to remove it. Press Save Warehouse once four corners are set.
    </string>
    <string name="draw_warehouse">Draw warehouse</string>
    <string name="select_warehouse">Select Warehouse</string>
    <string name="provider">Provider</string>
    <string name="enter_provider">Enter Provider</string>
    <string name="enter_supplier">Enter Supplier</string>
    <string name="supplier">Supplier</string>
    <string name="search">Search</string>
    <string name="reset">Reset</string>
    <string name="checkout">Checkout</string>
    <string name="order">Order</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_warehouse">Add New Warehouse</string>
    <string name="requests">Requests</string>
</resources>

