<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".Activities.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/warehouse_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img_login"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:clipToOutline="true"
        android:background="@drawable/circle_background" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/warehouse_image"
        android:layout_marginTop="20dp"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/email_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/email"
                android:textColor="@color/white"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/black"
                    android:background="@null"
                    android:padding="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/password_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/password"
                android:textColor="@color/white"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_email"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/black"
                    android:background="@null"
                    android:padding="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/log_in"
                android:textColor="@color/white"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform"
                app:backgroundTint="@color/darkgreen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_password" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/not_registered_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/not_registered"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_button"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/register"
                android:textColor="@color/white"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform"
                app:backgroundTint="@color/darkgreen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/not_registered_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
