<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".AdminActivities.AdminLobbyActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation"
        android:padding="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:textColor="@color/orange"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingBottom="16dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_explanation"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:lineSpacingExtra="8dp"
                android:paddingBottom="16dp" />

            <!-- Add your images here -->
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/img_desc"
                android:scaleType="centerCrop"
                android:layout_marginBottom="16dp"
                app:shapeAppearanceOverlay="@style/CustomShapeAppearance.Circular" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_feature_1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:lineSpacingExtra="8dp"
                android:paddingBottom="16dp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/img_desc2"
                android:scaleType="centerCrop"
                android:layout_marginBottom="16dp"
                app:shapeAppearanceOverlay="@style/CustomShapeAppearance.Circular" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_feature_2"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:lineSpacingExtra="8dp"
                android:paddingBottom="16dp" />

            <!-- Add more images and features if needed -->

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/darkgreen"
        app:menu="@menu/bottom_nav_menu_worker_picker" />

</RelativeLayout>
