<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".Activities.InventoryActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentTop="true"
        android:padding="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_add_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_new_item"
                    android:textColor="@color/white"
                    app:icon="@drawable/ic_add"
                    app:iconTint="@color/white"
                    app:iconGravity="start"
                    app:backgroundTint="@color/darkgreen"
                    android:textSize="18sp"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    android:elevation="4dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_add_warehouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_new_warehouse"
                    android:textColor="@color/white"
                    app:icon="@drawable/ic_warehouse"
                    app:iconTint="@color/white"
                    app:iconGravity="start"
                    app:backgroundTint="@color/darkgreen"
                    android:textSize="18sp"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    android:elevation="4dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_update_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update_item"
                    android:textColor="@color/white"
                    app:icon="@drawable/ic_update"
                    app:iconTint="@color/white"
                    app:iconGravity="start"
                    app:backgroundTint="@color/darkgreen"
                    android:textSize="18sp"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    android:elevation="4dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_warehouse_map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/warehouse_map"
                    android:textColor="@color/white"
                    app:icon="@drawable/ic_map"
                    app:iconTint="@color/white"
                    app:iconGravity="start"
                    app:backgroundTint="@color/darkgreen"
                    android:textSize="18sp"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    android:elevation="4dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_inventory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/inventory"
                    android:textColor="@color/white"
                    app:icon="@drawable/ic_inventory2"
                    app:iconTint="@color/white"
                    app:iconGravity="start"
                    app:backgroundTint="@color/darkgreen"
                    android:textSize="18sp"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    android:elevation="4dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_request"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/requests"
                    android:textColor="@color/white"
                    app:icon="@drawable/ic_request"
                    app:iconTint="@color/white"
                    app:iconGravity="start"
                    app:backgroundTint="@color/darkgreen"
                    android:textSize="18sp"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    android:elevation="4dp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/darkgreen"
        android:elevation="8dp"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        />

</RelativeLayout>
